src/objects/Trail__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Trail</description>
        <inlineHelpText>Enter the information about the trail.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>Trail length.</description>
        <inlineHelpText>Enter the trail distance.</inlineHelpText>
        <label>Distance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <description>Date the trail was inspected</description>
        <inlineHelpText>Enter the last Date the trail was inspected</inlineHelpText>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <label>Trail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>